[package]
name = "json_api"
version = "0.1.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
edition = "2018"

[dependencies]
# Version 0.4.1 with "cookie" updated to 0.12
rocket = { git = "https://github.com/voidxnull/Rocket", branch = "v0.4" }
serde = "1.0.94"
serde_json = "1.0.39"
structopt = "0.2.18"
rocket_contrib = "0.4.1"
serde_derive = "1.0.94"
failure = "0.1.5"
parking_lot = "0.8.0"

client = { path = "../client" }
failure_ext = { path = "../common/failure_ext" }
logger = { path = "../common/logger" }
crash_handler = { path = "../common/crash_handler" }
types = { path = "../types" }
crypto = { path = "../crypto/legacy_crypto" }
vm_genesis = { path = "../language/vm/vm_genesis" }
